2001-08-21  Scott S. Goodwin  <scott@scottg.net>

	* https.tcl: fixed a bug that was fixed once before but apparently
	I got my files mixed up. rqset wasn't being passed from
	ns_httpsget to ns_httpsopen.

2001-08-20  Scott S. Goodwin  <scott@scottg.net>

	* https.tcl: changed ns_httpsopen such that when it's passed a url
	that does not begin with "https://", it will first try to prepend
	the ServerLocation param, then the ServerHostname param, then the
	ServerAddress param. If all of them fail, it will log an error,
	but continue processing. Should probably make it a fatal error for
	nsopenssl to load if one or more of these parameters are not set.

	* ssl.c: bug fix: trying to use module and type from ccPtr after
	ccPtr had been destroyed.

2001-08-17  Scott S. Goodwin  <scott@scottg.net>

	* ssl.c: tested the sock client and sockserver's ability to
	validate their peer's certificate. Tested nsdserver's ability to
	validate client's certificate.

	* nsopenssl.h: defined version for OpenSSL 0.9.6b.

        * https.tcl: made rqset the second to last arg passed to
        ns_httpsget.

2001-08-16  Scott S. Goodwin  <scott@scottg.net>

        * init.c: turned on the peerVerify code for SSL sock server and
        sock clients (as opposed to NSD-driven conns). Need to test.

        * tclcmds.c: was using an interp before it was allocated. Pretty
        amazing. Adam Zell pointed this out.

        * init.c: boneheadedly #if 0'd out the client cert verification
        code for NSD-driven conns. Works now. Sean Yamamoto noticed the
        problem.

        * init.c: should have been initializin sdPtr->randomFile *before*
        calling SeedPRNG. Also should have been freeing randomFile when
        freein the driver. Thanks to Adam Zell for pointing these out.

2001-08-15  Scott S. Goodwin  <scott@scottg.net>

        * https.tcl: add the rqset parameter to ns_httpsget so that
        cookies can be used.

2001-08-09  Scott S. Goodwin  <scott@scottg.net>
